--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="navbar">
-        <img src="/image/Group 1000001575.png" />
+        <img src="/image/Group 1000001575.png" alt="logo" id="logo"/>
         <h3 id="cName">BIKE NATION</h3>
         <div id="navblock">
             <nav>
@@ -23,6 +23,7 @@
                 <a class="navItem" href="#">Sign Up</a>
             </nav>
         </div>
+        <hr id="navhr">
     </div>
     <div id="monkContent">
         <img widdth="100%" src="./image/Screenshot from 2022-08-15 09-22-14.png" />
