--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
             <nav>
                 <a class="navItem" href="#">Home</a>
                 <a class="navItem" href="#">Rental</a>
-                <a class="navItem" href="#">Login</a>
+                <a class="navItem" id="login" href="#">Login</a>
+                <ul class="dropdown">
+                    <li><a href="#">Sub-1</a></li>
+                    <li><a href="#">Sub-2</a></li>
+                    <li><a href="#">Sub-3</a></li>
+                  </ul>
                 <a class="navItem" href="#">Sign Up</a>
             </nav>
         </div>
