Completed Navbar Smoothly

--- a/index.html
+++ b/index.html
@@ -13,22 +13,17 @@
 
 <body>
     <div id="navbar">
-        <img src="/image/Group 1000001575.png" alt="logo" id="logo"/>
+        <img src="/image/Group 1000001575.png" alt="logo" id="logo" />
         <h3 id="cName">BIKE NATION</h3>
         <div id="navblock">
-            <nav>
-                <a class="navItem" href="#">Home</a>
-                <a class="navItem" href="#">Rental</a>
-                <a class="navItem" id="login" href="#">Login</a>
-                <ul class="dropdown">
-                    <li><a href="#">Sub-1</a></li>
-                    <li><a href="#">Sub-2</a></li>
-                    <li><a href="#">Sub-3</a></li>
-                  </ul>
-                <a class="navItem" href="#">Sign Up</a>
-            </nav>
+                <button class="navItem" id="home" href="#">Home</button>
+                <button class="navItem"  id="rental" href="#">Rental</button>
+                <button class="navItem" id="login" href="#">Login &#9;&#x2630;</button>
+                <button class="navItem" id="sign-up" href="#">Signup</button>
+            <hr id="nomadHr">
         </div>
         <hr id="navhr">
+    </div>
     </div>
     <div id="monkContent">
         <img widdth="100%" src="./image/Screenshot from 2022-08-15 09-22-14.png" />
