--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/style.css" />
+    <link rel="stylesheet" href="./src/style.css" />
     <!-- For rounded fonts -->
-    <link rel="stylesheet" href="/src/Fonts/webkit/stylesheet.css" />
+    <link rel="stylesheet" href="./src/Fonts/webkit/stylesheet.css" />
     <title>Monk Challenge 002</title>
 </head>
 
 <body>
     <div id="navbar">
-        <img src="/image/Group 1000001575.png" alt="logo" id="logo" />
+        <img src="./image/Group 1000001575.png" alt="logo" id="logo" />
         <h3 id="cName">BIKE NATION</h3>
         <div id="navblock">
                 <button class="navItem" id="home" href="#">Home</button>
@@ -35,7 +35,7 @@
             <a href="https://drive.google.com/file/d/13Gp0kF4CMxpUOZhS1JBO2y92Eu1yE352/view?usp=sharing">Nav Bar
                 Picture</a>
         </div>
-        <script src="src/index.js"></script>
+        <script src="./src/index.js"></script>
     </div>
 </body>
 
