trasition time 2 to 1.5 changed the time for transitions to 1.5sec

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
         <hr id="navhr">
     </div>
+    <div><p>Kindly open in new tab for a better experience.</p></div>
     </div>
     <div id="monkContent">
         <img widdth="100%" src="./image/Screenshot from 2022-08-15 09-22-14.png" />
