--- a/index.html
+++ b/index.html
@@ -1,42 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/style.css" />
     <!-- For rounded fonts -->
     <link rel="stylesheet" href="./src/Fonts/webkit/stylesheet.css" />
     <title>Monk Challenge 002</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="navbar">
-        <img src="./image/Group 1000001575.png" alt="logo" id="logo" />
-        <h3 id="cName">BIKE NATION</h3>
-        <div id="navblock">
-                <button class="navItem" id="home" href="#">Home</button>
-                <button class="navItem"  id="rental" href="#">Rental</button>
-                <button class="navItem" id="login" href="#">Login &#9;&#x2630;</button>
-                <button class="navItem" id="sign-up" href="#">Signup</button>
-            <hr id="nomadHr">
-        </div>
-        <hr id="navhr">
+      <img src="./image/Group 1000001575.png" alt="logo" id="logo" />
+      <h3 id="cName">BIKE NATION</h3>
+      <div id="navblock">
+        <button class="navItem" id="home" href="#">Home</button>
+        <button class="navItem" id="rental" href="#">Rental</button>
+        <button class="navItem" id="login" href="#">Login &#9;&#x2630;</button>
+        <button class="navItem" id="sign-up" href="#">Signup</button>
+        <hr id="nomadHr" />
+      </div>
+      <hr id="navhr" />
     </div>
-</div>
     <div id="monkContent">
-        <img widdth="100%" src="./image/Screenshot from 2022-08-15 09-22-14.png" />
-        <h2>
-            Come up the above navigation bar. in code. Bonouse points if you can show
-            which button was clicked. use html css and js.
-        </h2>
-        <div>
-            <a href="https://drive.google.com/file/d/13Gp0kF4CMxpUOZhS1JBO2y92Eu1yE352/view?usp=sharing">Nav Bar
-                Picture</a>
-        </div>
+      <img
+        widdth="100%"
+        src="./image/Screenshot from 2022-08-15 09-22-14.png"
+      />
+      <h2>
+        Come up the above navigation bar. in code. Bonouse points if you can
+        show which button was clicked. use html css and js.
+      </h2>
+      <div>
+        <a
+          href="https://drive.google.com/file/d/13Gp0kF4CMxpUOZhS1JBO2y92Eu1yE352/view?usp=sharing"
+          >Nav Bar Picture</a
+        >
+      </div>
     </div>
     <script src="./src/index.js"></script>
-</body>
-
+  </body>
 </html>
